--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -39,7 +49,8 @@ dependencies {
     // networking
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:3.8.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.9'
 
     // images
     implementation 'com.squareup.picasso:picasso:2.71828'
